# flowbeat

./: .env.example  .gitignore  README.md  docker-compose.yml  flowbeat.code-workspace
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/.github/instructions/: backend-rules.instructions.md
backend/.github/prompts/: backend.prompt.md  build-module.prompt.md
backend/alembic/: env.py
backend/alembic/versions/: 5967ac8d20d9_增加用户和偏好流派多对多关联.py  8729e0b26799_创建后端数据库_v1_版本.py  9b7f6a2d4c31_增加歌曲搜索全文索引.py  a1c9f7e3b2d4_增加用户收藏表.py  bf35f1409a44_初始版本数据库.py  ec8c1eb3ec2c_增加热门榜复合索引.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  favorites.py  genres.py  history.py  recommendations.py  songs.py  user.py
backend/app/core/: cache.py  config.py  security.py  storage.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  associations.py  play_count.py  play_history.py  song.py  song_meta.py  user.py  user_favorite.py  user_session.py
backend/app/schemas/: __init__.py  auth.py  music.py  user.py
backend/app/services/: __init__.py  auth_service.py  favorite_service.py  genre_labels.py  genre_service.py  play_history_service.py  recommendation_service.py  song_service.py  track_mapper.py  user_service.py
frontend/: .dockerignore  (+5 more)
recsys/: .dockerignore  Dockerfile  export_embeddings.py  infer.py  pyproject.toml  runtime_paths.py  train.py  train_two_tower.py
recsys/.github/: recsys-rules.instructions.md
recsys/.github/instructions/: recsys-rules.instructions.md
recsys/.github/prompts/: recsys.prompt.md
recsys/artifacts/: PLACEHOLDER.txt
recsys/checkpoints/: PLACEHOLDER.txt
recsys/configs/: __init__.py
recsys/configs/two_tower/: __init__.py  cloud_full.json  config.yaml  config_cloud.yaml  config_local.yaml  local_full.json  local_mvp.json  schema_v1.json
recsys/datasets/: __init__.py
recsys/datasets/two_tower/: __init__.py  build_interactions.py  data_contract.py
recsys/evaluation/: __init__.py
recsys/evaluation/two_tower/: __init__.py  offline_eval.py
recsys/features/: __init__.py
recsys/features/content_based/: __init__.py  build_profiles.py  song_content_profile.py  user_preference_profile.py
recsys/features/two_tower/: __init__.py  build_features.py
recsys/inference/: __init__.py
recsys/inference/content_based/: __init__.py  build_candidates.py  build_ranked.py  candidate_recall.py  rank_scoring.py
recsys/inference/two_tower/: __init__.py  rank_scoring.py
recsys/inference/writers/: __init__.py  build_redis_writeback.py  redis_writeback.py  write_redis.py
recsys/models/two_tower/: __init__.py  model.py
recsys/training/: __init__.py
(+57 files in other folders)
