[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "minio>=7.2.20",
    "pathlib>=1.0.1",
    "pydantic-settings>=2.13.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]
