[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2.0",
    "pymysql>=1.1.2",
    "pyyaml>=6.0",
    "oss2>=2.19.1",
    "redis>=6.4.0",
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.21.0+cu128",
]

# 清华 PyPI 源（通用包的默认源，速度快）
[[tool.uv.index]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# PyTorch 官方 GPU 车轮索引（专门提供给 torch 等包）
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }
