[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.2.0",
    "pymysql>=1.1.2",
    "pyyaml>=6.0",
    "oss2>=2.19.1",
    "redis>=6.4.0",
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
]


# PyTorch GPU 版本专用索引
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }
